--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -11,6 +11,7 @@ $color-primary: #6366f1;
 $color-white: #ffffff;
 $color-form: #9397ad;
 $color-button-black: #0b0f19;
+$color-grey: #f3f3fe;
 
 /// Grayscale
 $color-gray-scale: #e2e5f1;
@@ -70,7 +71,7 @@ $display-heading: (
   "d-6": 2.625em,
   "d-7": 2.76875em,
   /// 44.3ox
-  "d-8": 2.13125em /// 34.1px,,,,,,,,,,,,,,,,,
+  "d-8": 2.13125em /// 34.1px,,,,,,,,,,,,,,,,,,,,,
 );
 $headings: (
   "h-1": 2.5rem,
@@ -249,7 +250,7 @@ $spacing-distance-base: (
 ///   }
 $border-radius: (
   "r-0-2": 0.25em,
-  "r-0-5": 0.5em,
   /// 8px
+  "r-0-5": 0.5em,
   "r-2-2": 2.25em,
 );
