Mobile first, Mobile How does it work implemented

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -49,6 +49,22 @@ h1 {
     map-get($map: a.$font-weight, $key: "ExtraBold")
   );
 }
+/// Default H4 Font Settings
+h3 {
+  @include font-settings(
+    map-get($map: a.$headings, $key: "h-3"),
+    a.$font-color-label,
+    map-get($map: a.$font-weight, $key: "ExtraBold")
+  );
+}
+/// Default H4 Font Settings
+h4 {
+  @include font-settings(
+    map-get($map: a.$headings, $key: "h-4"),
+    a.$font-color-secondary,
+    map-get($map: a.$font-weight, $key: "ExtraBold")
+  );
+}
 
 /// Default H5 Font Settings
 h5 {
