--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -11,7 +11,7 @@ $color-primary: #6366f1;
 $color-white: #ffffff;
 $color-form: #9397ad;
 $color-button-black: #0b0f19;
-$color-grey: #f3f3fe;
+$color-grey: #f3f6ff;
 
 /// Grayscale
 $color-gray-scale: #e2e5f1;
@@ -71,11 +71,12 @@ $display-heading: (
   "d-6": 2.625em,
   "d-7": 2.76875em,
   /// 44.3ox
-  "d-8": 2.13125em /// 34.1px,,,,,,,,,,,,,,,,,,,,,
+  "d-8": 2.13125em /// 34.1px,,,,,,,,,,,,,,,,,,,,,,,
 );
 $headings: (
   "h-1": 2.5rem,
   "h-2": 2rem,
+  /// 28px
   "h-3": 1.75rem,
   "h-4": 1.5rem,
   "h-5": 1.25rem,
