--- a/src/scss/pages/_main-page.scss
+++ b/src/scss/pages/_main-page.scss
@@ -665,7 +665,8 @@ $_container-name-main: main;
   /// Adding some padding
 
   &__company-logos,
-  &__app-features {
+  &__app-features,
+  &__app-how-diw {
     @include l.container-query(
       $_container-name-main,
       0,
@@ -916,6 +917,37 @@ $_container-name-main: main;
     }
     &__app-features-cards__card-container__card-item h5 {
       padding-bottom: 0.75em;
+    }
+  }
+
+  /// How Does It Works?
+  &__app-how-diw {
+    background-color: a.$color-grey;
+
+    @include l.flex(flex-start);
+    gap: map-get($map: a.$spacing-distance-relative, $key: "s-1-50");
+    padding-top: 4.5625rem;
+    padding-bottom: map-get($map: a.$spacing-distance-base, $key: "sb-2-37");
+    flex-direction: column;
+    align-items: center;
+
+    /// Mobile Phones
+    @include l.container-query(
+      $_container-name-main,
+      0,
+      map-get($map: a.$breakpoints, $key: "medium")
+    ) {
+      & h1 {
+        @extend h3;
+      }
+      & h4,
+      p {
+        text-align: center;
+        @include b.font-settings(null, a.$font-color-text, null);
+      }
+      & p {
+        padding-bottom: 3.8125rem;
+      }
     }
   }
 }
