--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -71,7 +71,7 @@ $display-heading: (
   "d-6": 2.625em,
   "d-7": 2.76875em,
   /// 44.3ox
-  "d-8": 2.13125em /// 34.1px,,,,,,,,,,,,,,,,,,,,,,,
+  "d-8": 2.13125em /// 34.1px,,,,,,,,,,,,,,,,,,,,,,,,,
 );
 $headings: (
   "h-1": 2.5rem,
@@ -210,6 +210,8 @@ $spacing-distance-relative: (
   /// 75px
   "s-5-62": 5.625em,
   /// 90px
+  "s-6-25": 6.25em,
+  /// 100px
   "s-8-12": 8.125em,
   "s-9-37": 9.375em,
 );
