--- a/src/scss/pages/_main-page.scss
+++ b/src/scss/pages/_main-page.scss
@@ -658,8 +658,7 @@ $_grid-max-width: 46.625rem;
 /// Local variabel :D
 $_container-name-main: main;
 
-/// Global Paddings Main Wrapper
-
+/// Global SCSS for Main wrapper and it's children
 .main-wrapper {
   /// Larger desktop screens
   /// Adding some padding
@@ -670,7 +669,7 @@ $_container-name-main: main;
     @include l.container-query(
       $_container-name-main,
       0,
-      map-get($map: a.$breakpoints, $key: "xlarge-2")
+      map-get($map: a.$breakpoints, $key: "xlarge-1")
     ) {
       /// Adding some Padding eh :D
       padding-left: map-get($map: a.$spacing-distance-relative, $key: "s-1-50");
@@ -678,25 +677,34 @@ $_container-name-main: main;
         $map: a.$spacing-distance-relative,
         $key: "s-1-50"
       );
+      padding-bottom: 0;
     }
   }
 }
 
 .main-wrapper {
   /// Activate Container Query Properties for main-wrapper
-
   @include l.container-query-wrapper($_container-name-main);
-  background-color: white;
 
-  /// Adding Correct Full With for content
+  /// Global :)
   /// Content Width
-  @include l.content-width(
-    map-get($map: a.$max-content-width, $key: "desktop"),
-    map-get($map: a.$content-width-percentage, $key: "full-width")
-  );
-
+  &__company-logos__container,
+  &__app-features__container,
+  &__app-how-diw__container {
+    /// Adding Correct Full With for content
+    /// Content Width
+    @include l.content-width(
+      map-get($map: a.$max-content-width, $key: "desktop"),
+      map-get($map: a.$content-width-percentage, $key: "full-width")
+    );
+  }
+  /// Flex it!
+  &__app-how-diw__container,
+  &__app-how-diw__container__image-items {
+    @include l.flex(flex-start);
+  }
   /// Company Logos
-  &__company-logos {
+  &__company-logos__container {
     /// Lest's flex it and Gap it!
     @include l.flex(center);
     gap: map-get($map: a.$spacing-distance-relative, $key: "s-1-50");
@@ -728,6 +736,7 @@ $_container-name-main: main;
       #c-l-5 {
         display: none;
       }
+      padding-bottom: 3.875em;
     }
 
     /// Setting
@@ -755,7 +764,7 @@ $_container-name-main: main;
         a.$color-gray-scale
       );
       width: 12.25em;
-      height: 6.25em;
+      height: map-get($map: a.$spacing-distance-relative, $key: "s-6-25");
 
       /// Mobile Phones :)
     }
@@ -774,7 +783,7 @@ $_container-name-main: main;
   }
 
   /// App Features
-  &__app-features {
+  &__app-features__container {
     /// TODO: Below 357 pixel the app features card not displaying correctly :),
     /// Lest's flex it and Gap it!
     @include l.flex(flex-start);
@@ -920,33 +929,99 @@ $_container-name-main: main;
     }
   }
 
-  /// How Does It Works?
-  &__app-how-diw {
+  /// Background Color
+  .main-wrapper__app-how-diw {
     background-color: a.$color-grey;
+  }
 
-    @include l.flex(flex-start);
+  /// How Does It Works?
+  &__app-how-diw__container {
     gap: map-get($map: a.$spacing-distance-relative, $key: "s-1-50");
     padding-top: 4.5625rem;
     padding-bottom: map-get($map: a.$spacing-distance-base, $key: "sb-2-37");
     flex-direction: column;
     align-items: center;
+    @include b.font-settings(null, a.$font-color-secondary, null);
 
+    & p {
+      @include b.font-settings(null, a.$font-color-text, null);
+      padding-bottom: 4.9375rem;
+    }
+    /// Text Centering
+    & p,
+    h4,
+    h1 {
+      text-align: center;
+      max-width: 39.75em;
+    }
+
+    /// Img Base Size
+    &__image-items {
+      /// Adding some gap
+      gap: map-get($map: a.$spacing-distance-relative, $key: "s-6-25");
+
+      /// Setting image height
+      & img {
+        height: 39.375em;
+      }
+      /// Spacing
+      padding-bottom: map-get(
+        $map: a.$spacing-distance-relative,
+        $key: "s-3-31"
+      );
+    }
+
+    /// Adding some Gap
+
+    /// Tablets, Smaller Laptops
+    @include l.container-query(
+      $_container-name-main,
+      0,
+      map-get($map: a.$breakpoints, $key: "xlarge-1")
+    ) {
+      & h1 {
+        @include b.font-settings(2.09375rem, null, null);
+      }
+      & p,
+      h4 {
+        max-width: 26.5em;
+      }
+      /// Setting image height
+      & img {
+        height: 23.625em;
+      }
+      & p {
+        padding-bottom: map-get(
+          $map: a.$spacing-distance-relative,
+          $key: "s-6-25"
+        );
+      }
+    }
     /// Mobile Phones
     @include l.container-query(
       $_container-name-main,
       0,
       map-get($map: a.$breakpoints, $key: "medium")
     ) {
+      /// Font Modifications
       & h1 {
-        @extend h3;
+        @include b.font-settings(
+          1.74375rem,
+          a.$font-color-label,
+          map-get($map: a.$font-weight, $key: "ExtraBold")
+        );
       }
-      & h4,
-      p {
-        text-align: center;
-        @include b.font-settings(null, a.$font-color-text, null);
+      & h4 {
+        @include b.font-settings(1.35rem, null null);
       }
       & p {
-        padding-bottom: 3.8125rem;
+        padding-bottom: 3.75em;
+      }
+
+      /// Les hide some images
+      & #how-phone-2,
+      #how-phone-3 {
+        display: none;
       }
     }
   }
