--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -71,7 +71,7 @@ $display-heading: (
   "d-6": 2.625em,
   "d-7": 2.76875em,
   /// 44.3ox
-  "d-8": 2.13125em /// 34.1px,,,,,,,,,,,,,,,,,,,,,,,,,
+  "d-8": 2.13125em /// 34.1px,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 );
 $headings: (
   "h-1": 2.5rem,
@@ -186,6 +186,8 @@ $spacing-distance-relative: (
   "s-0-62": 0.625em,
   /// 10px
   "s-1-1": 1em,
+  "s-1-06": 1.0625em,
+  /// 17px
   "s-1-25": 1.25em,
   /// 20px
   "s-1-37": 1.375em,
@@ -194,6 +196,8 @@ $spacing-distance-relative: (
   /// 24px
   "s-1-87": 1.875em,
   /// 30px
+  "s-2-00": 2em,
+  /// 32px
   "s-2-25": 2.25em,
   /// 36px
   "s-3-00": 3rem,
@@ -213,6 +217,8 @@ $spacing-distance-relative: (
   "s-6-25": 6.25em,
   /// 100px
   "s-8-12": 8.125em,
+  "s-8-31": 8.3125em,
+  /// 133p
   "s-9-37": 9.375em,
 );
 
@@ -253,6 +259,7 @@ $spacing-distance-base: (
 ///   }
 $border-radius: (
   "r-0-2": 0.25em,
+  "r-0-3": 0.375em,
   /// 8px
   "r-0-5": 0.5em,
   "r-2-2": 2.25em,
